Acessar a pagina de Administrador

--- a/src/index.html
+++ b/src/index.html
@@ -202,8 +202,7 @@
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'index.html'">Início</button>
-          <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+          <button id="agend/adm" type="button" class="btn btn-outline-light" onclick="irAgendOuAdm()">Agendar</button>
           <button id="perfil/login" type="button" class="btn btn-outline-light" onclick="irParaTela()">Login</button>
         </div>
 
@@ -271,7 +270,8 @@
                 <strong>organizada</strong> e um
                 sistema de logística <strong>eficiente</strong>, a Lavadrive garante que seus clientes recebam sejam
                 atentidos no prazo
-                estabelecido, demonstrando assim um serviço <strong>confiável e pontual</strong>. </p>
+                estabelecido, demonstrando assim um serviço <strong>confiável e pontual</strong>.
+              </p>
             </div>
 
           </div>
@@ -279,7 +279,8 @@
           <div class="col-5 m-2 card text-center">
             <div class="card-body">
               <h5 class="card-title" style="color: black;">Deseja se tornar um cliente?</h5>
-              <p class="card-text" style="color: #000000;">Não perca tempo e crie seu cadastro na Lavadrive para aproveitar benefícios exclusivos e facilidade no agendamento dos serviços!</p>
+              <p class="card-text" style="color: #000000;">Não perca tempo e crie seu cadastro na Lavadrive para
+                aproveitar benefícios exclusivos e facilidade no agendamento dos serviços!</p>
               <a href="CadastroUsuário.html" class="btn btn-dark">Crie sua conta</a>
             </div>
           </div>
