--- a/src/RecuperarSenha.html
+++ b/src/RecuperarSenha.html
@@ -48,8 +48,7 @@
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light"
             onclick="window.location.href = 'index.html'">Início</button>
-          <button type="button" class="btn btn-outline-light"
-            onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+            <button id="agend/adm" type="button" class="btn btn-outline-light" onclick="irAgendOuAdm()">Agendar</button>
           <button id="perfil/login" type="button" class="btn btn-outline-light"
             onclick="irParaTela()">Login</button>
         </div>
