Ajustes na pagina inicial

--- a/src/index.html
+++ b/src/index.html
@@ -218,85 +218,86 @@
         style="font-size: 36px; font-weight: bold; color: #171718; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; ">
         SOLUÇÕES EM LIMPEZA E ESTÉTICA AUTOMOTIVA</h1>
 
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" style="width: 60%;">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/imgCarrosel.jpeg" class="d-block w-100">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div id="carouselExampleAutoplaying" class="carousel slide justify-content-center" data-bs-ride="carousel" style="width: 60%;">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/imgCarrosel.jpeg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/imgCarrosel (2).jpeg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/imgCarrosel (3).jpeg" class="d-block w-100">
+                </div>
               </div>
-              <div class="carousel-item">
-                <img src="img/imgCarrosel (2).jpeg" class="d-block w-100">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          <div class="row justify-content-center">
+            <div
+              class="row col-10 col-sm-4 col-md-4 col-lg-2 text-center justify-content-center border rounded mx-2 my-1">
+  
+              <div class="col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
+                <img src="https://cdn-icons-png.flaticon.com/512/3554/3554364.png" class="card-img-top" alt="...">
               </div>
-              <div class="carousel-item">
-                <img src="img/imgCarrosel (3).jpeg" class="d-block w-100">
+  
+              <div class="col-sm-12 col-md-12 col-lg-12 card-body text-center">
+                <p class="card-text" style="color: #000000; font-size:small;">No Lavadrive, o comprometimento é a essência
+                  de nosso negócio. Nossa equipe está empenhada em fornecer serviços de lavagem excepcionais. </p>
+              </div>
+  
+            </div>
+  
+            <div
+              class="row col-10 col-sm-4 col-md-4 col-lg-2 text-center justify-content-center border rounded mx-2 my-1">
+  
+              <div class="col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
+                <img src="https://cdn-icons-png.flaticon.com/512/3967/3967132.png" class="card-img-top" alt="...">
+              </div>
+  
+              <div class="col-sm-12 col-md-12 col-lg-12 card-body text-center">
+                <p class="card-text" style="color: #000000; font-size:small;">Com uma equipe altamente
+                  <strong>organizada</strong> e um
+                  sistema de logística <strong>eficiente</strong>, a Lavadrive garante que seus clientes recebam sejam
+                  atentidos no prazo
+                  estabelecido, demonstrando assim um serviço <strong>confiável e pontual</strong>.
+                </p>
+              </div>
+  
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-5 m-2 card text-center">
+              <div class="card-body">
+                <h5 class="card-title" style="color: black;">Deseja se tornar um cliente?</h5>
+                <p class="card-text" style="color: #000000;">Não perca tempo e crie seu cadastro na Lavadrive para
+                  aproveitar benefícios exclusivos e facilidade no agendamento dos serviços!</p>
+                <a href="CadastroUsuário.html" class="btn btn-dark">Crie sua conta</a>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-              data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+  
+            <div class="col-5 m-2 card text-center">
+              <div class="card-body">
+                <h5 class="card-title" style="color: black;">Já utiliza a LavaDrive?</h5>
+                <p class="card-text" style="color: #000000;">Agende agora mesmo e desfrute de um tratamento VIP para o seu
+                  veículo. Vamos deixá-lo impecável de dentro para fora! Não perca tempo, reserve seu horário e sinta o
+                  prazer de dirigir um carro completamente limpo e renovado.!</p>
+                <a href="Agendamento.html" class="btn btn-dark">Agendar um horário</a>
+              </div>
+            </div>
+          </div>  
           </div>
-
-          <div
-            class="row col-10 col-sm-4 col-md-4 col-lg-2 text-center justify-content-center border rounded mx-2 my-1">
-
-            <div class="col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
-              <img src="https://cdn-icons-png.flaticon.com/512/3554/3554364.png" class="card-img-top" alt="...">
-            </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-12 card-body text-center">
-              <p class="card-text" style="color: #000000; font-size:small;">No Lavadrive, o comprometimento é a essência
-                de nosso negócio. Nossa equipe está empenhada em fornecer serviços de lavagem excepcionais. </p>
-            </div>
-
-          </div>
-
-          <div
-            class="row col-10 col-sm-4 col-md-4 col-lg-2 text-center justify-content-center border rounded mx-2 my-1">
-
-            <div class="col-sm-12 col-md-12 col-lg-12 text-center justify-content-center">
-              <img src="https://cdn-icons-png.flaticon.com/512/3967/3967132.png" class="card-img-top" alt="...">
-            </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-12 card-body text-center">
-              <p class="card-text" style="color: #000000; font-size:small;">Com uma equipe altamente
-                <strong>organizada</strong> e um
-                sistema de logística <strong>eficiente</strong>, a Lavadrive garante que seus clientes recebam sejam
-                atentidos no prazo
-                estabelecido, demonstrando assim um serviço <strong>confiável e pontual</strong>.
-              </p>
-            </div>
-
-          </div>
-
-          <div class="col-5 m-2 card text-center">
-            <div class="card-body">
-              <h5 class="card-title" style="color: black;">Deseja se tornar um cliente?</h5>
-              <p class="card-text" style="color: #000000;">Não perca tempo e crie seu cadastro na Lavadrive para
-                aproveitar benefícios exclusivos e facilidade no agendamento dos serviços!</p>
-              <a href="CadastroUsuário.html" class="btn btn-dark">Crie sua conta</a>
-            </div>
-          </div>
-
-          <div class="col-5 m-2 card text-center">
-            <div class="card-body">
-              <h5 class="card-title" style="color: black;">Já utiliza a LavaDrive?</h5>
-              <p class="card-text" style="color: #000000;">Agende agora mesmo e desfrute de um tratamento VIP para o seu
-                veículo. Vamos deixá-lo impecável de dentro para fora! Não perca tempo, reserve seu horário e sinta o
-                prazer de dirigir um carro completamente limpo e renovado.!</p>
-              <a href="Agendamento.html" class="btn btn-dark">Agendar um horário</a>
-            </div>
-          </div>
-
         </div>
-      </div>
 
       <!--Rodape-->
       <footer class="m-0 p-0 d-block text-white container-fluid">
