--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -233,9 +233,11 @@
         <h4>Finalizar Agendamento</h4>
 
         <button id="finalizar" class="btn btn-outline-black mb-2" style="width: 10rem;" type="button"
-          onclick="">Finalizar</button>
+        >Finalizar</button>
         <button class="casd btn btn-outline-danger mb-2" style="width: 10rem;" type="button"
           onclick="window.location.href=`index.html`">Cancelar</button>
+          <button class="btn btn-outline-black mb-2" style="width: 10rem;" type="button"
+          onclick="window.location.href=`Avaliacao.html`">Avaliar</button>
       </div>
     </div>
 
