--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -76,7 +76,7 @@
             <div id="cardContainer" class="row"></div>
                 
             <div class="mt-4">
-                <button class="btn btn-primary" id="ver-mais">Ver Avaliações</button>
+                <button class="btn btn-outline-dark" id="ver-mais">Ver Avaliações</button>
             </div>
             <div class="toggle-buttons">
 
