--- a/src/TrocarSenha.html
+++ b/src/TrocarSenha.html
@@ -104,7 +104,7 @@
               <label for="confirm-password">Confirme a nova senha:</label>
               <input type="password" class="form-control" id="confirm-password" placeholder="Confirme sua nova senha">
             </div>
-            <button type="submit" class="btn btn-primary" onclick="exibirPopup()">Trocar Senha</button>
+            <button type="submit" class="btn btn-primary btn-outline-dark" onclick="exibirPopup()">Trocar Senha</button>
           </form>
         </div>
       </div>
