--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -83,7 +83,7 @@
         privacidade
         <p id="avisoTermos" class="text-red"></p>
         <div class="text-center justify-content-center">
-          <button type="button" class="m-2 btn btn-outline-info text-center" onclick="salvarCadastro()">Criar</button>
+          <button type="button" class="m-2 btn btn-outline-dark text-center" onclick="salvarCadastro()">Criar</button>
         </div>
 
         <!--Mensagem toast-->
