--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -232,11 +232,11 @@
       <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Finalizar Agendamento</h4>
 
-        <button id="finalizar" class="btn btn-outline-black mb-2" style="width: 10rem;" type="button"
+        <button id="finalizar" class="btn btn-outline-dark mb-2 m-1" style="width: 10rem;" type="button"
         >Finalizar</button>
-        <button class="casd btn btn-outline-danger mb-2" style="width: 10rem;" type="button"
+        <button class="casd btn btn-outline-danger mb-2 m-1" style="width: 10rem;" type="button"
           onclick="window.location.href=`index.html`">Cancelar</button>
-          <button class="btn btn-outline-black mb-2" style="width: 10rem;" type="button"
+          <button class="btn btn-outline-success mb-2 m-1" style="width: 10rem;" type="button"
           onclick="window.location.href=`Avaliacao.html`">Avaliar</button>
       </div>
     </div>
