Atualiação para manter consistencia nas paginas

--- a/src/Administrador.html
+++ b/src/Administrador.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 
-<body>
+<body onload="confirmarAdm()">
     <!--Cabecalho-->
     <header class="m-0 d-block bg-blue">
         <nav class="navbar">
@@ -132,7 +132,6 @@
                         <p>Outros links úteis</p>
                     </li>
                     <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
-                    <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
                     <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
                     <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
                 </ul>
