--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body>
+<body onload="confirmarLogin()">
   <!--Cabecalho-->
   <header class="m-0 d-block bg-blue">
     <nav class="navbar">
@@ -144,7 +144,6 @@
             <p>Outros links úteis</p>
           </li>
           <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
-          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
           <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
           <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
         </ul>
