--- a/src/DúvidasAjuda.html
+++ b/src/DúvidasAjuda.html
@@ -26,13 +26,14 @@
                 <a href="index.html"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 75%;"></a>
 
                 <!--Opções-->
-        <div class="btn-group d-flex" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-outline-light"
-              onclick="window.location.href = 'index.html'">Início</button>
-              <button id="agend/adm" type="button" class="btn btn-outline-light" onclick="irAgendOuAdm()">Agendar</button>
-            <button id="perfil/login" type="button" class="btn btn-outline-light"
-              onclick="irParaTela()">Login</button>
-          </div>
+                <div class="btn-group d-flex" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'index.html'">Início</button>
+                    <button id="agend/adm" type="button" class="btn btn-outline-light"
+                        onclick="irAgendOuAdm()">Agendar</button>
+                    <button id="perfil/login" type="button" class="btn btn-outline-light"
+                        onclick="irParaTela()">Login</button>
+                </div>
 
             </div>
         </nav>
@@ -41,130 +42,111 @@
 
     <!--Conteudos-->
     <main class="m-0 d-block">
-        <div id="duvidas" class="p-2 m-1">
-            <h1 class="m-3">Dúvidas Frequentes</h1>
 
-            <!--Dúvidas-->
-            <div class="accordion" id="accordionPanelsStayOpenExample">
-                <!--Dúvida 1-->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseOne">
-                            Esqueci minha senha. Como posso recuperá-la?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
-                        <div class="accordion-body">
-                            <strong>Recuperação de senha.</strong> Para recuperar sua senha, você deve ir na tela de
-                            Login
-                            e clicar no botão "Esqueci a senha", assim você será redirecionado para uma página onde
-                            poderá redefinir sua senha e usar uma nova.
+        <div class="row justify-content-center container-fluid">
+
+            <div id="duvidas" class="col-9 p-2 m-1">
+                <h1 class="m-3 text-center">Dúvidas Frequentes</h1>
+
+                <!--Dúvidas-->
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <!--Dúvida 1-->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                aria-controls="panelsStayOpen-collapseOne">
+                                Esqueci minha senha. Como posso recuperá-la?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                            <div class="accordion-body">
+                                <strong>Recuperação de senha.</strong> Para recuperar sua senha, você deve ir na tela de
+                                Login
+                                e clicar no botão "Esqueci a senha", assim você será redirecionado para uma página onde
+                                poderá redefinir sua senha e usar uma nova.
+                            </div>
+                        </div>
+                    </div>
+                    <!--Dúvida 2-->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseTwo">
+                                Como eu faço para agendar uma limpeza do meu veículo?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <strong>Agendamento da lmpeza.</strong> Para agendar a limpeza do seu veículo, basta
+                                você
+                                clicar no botão "Agendar" (localizado no canto superior direito da página), que te
+                                levará
+                                para a página de agendamento. Lá, você pode agendar do seu jeito, podendo escolher a
+                                data, o
+                                horário, e o tipo de limpeza que você deseja, além de poder adiantar o pagamento e
+                                realizar
+                                observações caso queira.
+                            </div>
+                        </div>
+                    </div>
+                    <!--Dúvida 3-->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseThree">
+                                Como funciona o pagamento?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <strong>Pagamento.</strong> Todos os pagamentos são feitos presencialmente no momento da
+                                retirada do veiculo.
+                            </div>
+                        </div>
+                    </div>
+                    <!--Dúvida 4-->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseFour">
+                                Como alterar o veículo para limpeza?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <strong>Perfil.</strong> Para alterar o veículo, você deve, primeiro, adicionar as
+                                informações necessárias na página de cadastro de veículo. Feito o cadastro, você deve ir
+                                na
+                                página de agendamento, onde há uma opção que exibe o veículo selecionado e alterá-lo
+                                para o
+                                veículo desejado.
+                            </div>
+                        </div>
+                    </div>
+                    <!--Dúvida 5-->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
+                                aria-controls="panelsStayOpen-collapseSix">
+                                Quais formas de pagamento são aceitas?
+                            </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse">
+                            <div class="accordion-body">
+                                <strong>Formas de pagamento.</strong> As formas de pagamento aceitas pela LavaDrive são:
+                                Cartão de crédito e de débito (bandeiras VISA e MasterCard), boleto, pix e PayPal.
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!--Dúvida 2-->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseTwo">
-                            Como eu faço para agendar uma limpeza do meu veículo?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <strong>Agendamento da lmpeza.</strong> Para agendar a limpeza do seu veículo, basta você
-                            clicar no botão "Agendar" (localizado no canto superior direito da página), que te levará
-                            para a página de agendamento. Lá, você pode agendar do seu jeito, podendo escolher a data, o
-                            horário, e o tipo de limpeza que você deseja, além de poder adiantar o pagamento e realizar
-                            observações caso queira.
-                        </div>
-                    </div>
-                </div>
-                <!--Dúvida 3-->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseThree">
-                            Como adiantar o pagamento?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <strong>Pagamento adiantado.</strong> Para solicitar o pagamento adiantado da sua limpeza,
-                            você deve realizar o agendamento da limpeza desejada, e ao final do procedimento, você terá
-                            a opção para adiantar o pagamento, assim redirecionando-o à uma página para efetuar o
-                            processo de pagamento.
-                        </div>
-                    </div>
-                </div>
-                <!--Dúvida 4-->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseFour">
-                            Como alterar o veículo para limpeza?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <strong>Perfil.</strong> Para alterar o veículo, você deve, primeiro, adicionar as
-                            informações necessárias na página de cadastro de veículo. Feito o cadastro, você deve ir na
-                            página de agendamento, onde há uma opção que exibe o veículo selecionado e alterá-lo para o
-                            veículo desejado.
-                        </div>
-                    </div>
-                </div>
-                <!--Dúvida 5-->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseFive">
-                            Como fazer um comentário no processo da limpeza?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <strong>Observações.</strong> Ná página de agendamento, há um campo reservado para anotar
-                            todas as observações que você deseja. É importante ressaltar que essas observaçõs servem
-                            para que você nos dê algumas precauções que devemos tomar ao cuidar do seu veículo.
-                        </div>
-                    </div>
-                </div>
-                <!--Dúvida 6-->
-                <div class="accordion-item">
-                    <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseSix">
-                            Quais formas de pagamento são aceitas?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                            <strong>Formas de pagamento.</strong> As formas de pagamento aceitas pela LavaDrive são:
-                            Cartão de crédito e de débito (bandeiras VISA e MasterCard), boleto, pix e PayPal.
-                        </div>
-                    </div>
-                </div>
+
             </div>
-        </div>
 
-        <div id="ajuda" class="p-2 m-3 text-center justify-content-center">
-            <h1 class="p-2">Ajuda</h1>
-            <p class="m-3">Caso nenhuma das "Dúvidas Frequentes" citadas anteriormente tenham lhe respondido, por favor,
-                digite sua dúvida abaixo para que possamos te atender da melhor forma possível.</p>
-
-            <div class="m-3 pt-1 border text-center rounded">
-                <h4>Digite sua dúvida.</h4>
-                <textarea class="form-control mb-3 text-center obs" id="exampleFormControlTextarea1"
-                    rows="5"></textarea>
-            </div>
         </div>
 
     </main>
@@ -214,7 +196,6 @@
                         <p>Outros links úteis</p>
                     </li>
                     <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
-                    <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
                     <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
                     <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
                 </ul>
