--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -79,7 +79,7 @@
 
         <!--Botoes-->
         <div class="text-center">
-          <button type="button" class="mb-2 btn btn-outline-dark" onclick="SalvarCarro()">Adicionar</button>
+          <button type="button" class="mb-2 btn btn-outline-dark" onclick="validatePlaca()">Adicionar</button>
         </div>
       </div>
 
