--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -89,7 +89,7 @@
 
                 <div class="d-flex justify-content-center my-3">
                     <input id="perfilInputTelefone" class="form-control text-center border-secondary" type="search"
-                        placeholder="Telefone" aria-label="Search" style="width: 20rem;">
+                        placeholder="Telefone" aria-label="Search" style="width: 20rem;" onkeypress="return validarNumero(event), mascaraTelefone()" maxlength="16">
                 </div>
 
                 <div class="d-flex row justify-content-center my-3">
