--- a/src/RecuperarSenha.html
+++ b/src/RecuperarSenha.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body onload="confirmarLogin()">
+<body>
   <!--Cabecalho-->
   <header class="m-0 d-block bg-blue">
     <nav class="navbar">
