Ddefinindo tamanho maximo da senha

--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -65,7 +65,9 @@
         <!--Senha-->
         <div class="mb-3 mx-2">
           <label for="InputSenha" class="form-label ms-2">Senha:</label>
-          <input type="password" class="form-control" id="InputSenha" placeholder="">
+          <input type="password" class="form-control" id="InputSenha" placeholder=""
+          maxlength="15">
+          <small class="form-text text-muted">Máximo de 15 caracteres</small>
         </div>
         <!--Número-->
         <div class="mb-3 mx-2">
