--- a/src/TrocarSenha.html
+++ b/src/TrocarSenha.html
@@ -105,7 +105,7 @@
               <label for="confirm-password">Confirme a nova senha:</label>
               <input type="password" class="form-control" id="confirm-password" placeholder="Confirme sua nova senha" maxlength="15"> 
             </div>
-            <button type="submit" class="btn btn-primary" onclick="exibirPopup()">Trocar Senha</button>
+            <button type="submit" class="btn btn-outline-dark" onclick="exibirPopup()">Trocar Senha</button>
           </form>
         </div>
       </div>
